# beamtest-halld-analysis

./: .gitignore  CMakeLists.txt  README.md  pulldata  pullpics  run_analyzer  run_analyzer_range  run_major_runs  run_replay
data/inputs/: PS_energy.txt  major_runs.csv  pmt_gain.csv  run_settings_log.csv
preparation/cosmicMotor/: cosmicMotor  cosmic_motor.c
preparation/testBeamMotor/: README.md  compile  motionControl  motionctl.py  motor_control.c
scripts/: analyze_testbeam.C  langau_deconv.C  langaus.hh  plot_main_det.C  plot_utilities.hh  plot_waveform.C
